--- a/Xcode Projects/Trademate.xcodeproj/xcshareddata/xcschemes/macOS.xcscheme
+++ b/Xcode Projects/Trademate.xcodeproj/xcshareddata/xcschemes/macOS.xcscheme
@@ -17,7 +17,7 @@
                BlueprintIdentifier = "96F9673C26AD991100A1258E"
                BuildableName = "Cashflow Calculator.app"
                BlueprintName = "Cashflow Calculator (macOS)"
-               ReferencedContainer = "container:CashPlan.xcodeproj">
+               ReferencedContainer = "container:Trademate.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -35,7 +35,7 @@
                BlueprintIdentifier = "96F9674F26AD991100A1258E"
                BuildableName = "Tests macOS.xctest"
                BlueprintName = "Tests macOS"
-               ReferencedContainer = "container:CashPlan.xcodeproj">
+               ReferencedContainer = "container:Trademate.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -57,7 +57,7 @@
             BlueprintIdentifier = "96F9673C26AD991100A1258E"
             BuildableName = "Cashflow Calculator.app"
             BlueprintName = "Cashflow Calculator (macOS)"
-            ReferencedContainer = "container:CashPlan.xcodeproj">
+            ReferencedContainer = "container:Trademate.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -74,7 +74,7 @@
             BlueprintIdentifier = "96F9673C26AD991100A1258E"
             BuildableName = "Cashflow Calculator.app"
             BlueprintName = "Cashflow Calculator (macOS)"
-            ReferencedContainer = "container:CashPlan.xcodeproj">
+            ReferencedContainer = "container:Trademate.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
