--- a/Xcode Projects/Trademate.xcodeproj/xcshareddata/xcschemes/iOS.xcscheme
+++ b/Xcode Projects/Trademate.xcodeproj/xcshareddata/xcschemes/iOS.xcscheme
@@ -16,7 +16,7 @@
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "96F9673426AD991100A1258E"
                BuildableName = "Cashflow Calculator.app"
-               BlueprintName = "Cashflow Calculator (iOS)"
+               BlueprintName = "Trademate (iOS)"
                ReferencedContainer = "container:Trademate.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -56,7 +56,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "96F9673426AD991100A1258E"
             BuildableName = "Cashflow Calculator.app"
-            BlueprintName = "Cashflow Calculator (iOS)"
+            BlueprintName = "Trademate (iOS)"
             ReferencedContainer = "container:Trademate.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -73,7 +73,7 @@
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "96F9673426AD991100A1258E"
             BuildableName = "Cashflow Calculator.app"
-            BlueprintName = "Cashflow Calculator (iOS)"
+            BlueprintName = "Trademate (iOS)"
             ReferencedContainer = "container:Trademate.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
