--- a/Xcode Project/Trademate.xcodeproj/xcshareddata/xcschemes/Trademate (macOS).xcscheme
+++ b/Xcode Project/Trademate.xcodeproj/xcshareddata/xcschemes/Trademate (macOS).xcscheme
@@ -15,7 +15,7 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "9633393426D76305000F26C2"
-               BuildableName = "Trademate.app"
+               BuildableName = "Investments.app"
                BlueprintName = "Trademate (macOS)"
                ReferencedContainer = "container:Trademate.xcodeproj">
             </BuildableReference>
@@ -55,7 +55,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "9633393426D76305000F26C2"
-            BuildableName = "Trademate.app"
+            BuildableName = "Investments.app"
             BlueprintName = "Trademate (macOS)"
             ReferencedContainer = "container:Trademate.xcodeproj">
          </BuildableReference>
@@ -79,7 +79,7 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "9633393426D76305000F26C2"
-            BuildableName = "Trademate.app"
+            BuildableName = "Investments.app"
             BlueprintName = "Trademate (macOS)"
             ReferencedContainer = "container:Trademate.xcodeproj">
          </BuildableReference>
